--- a/1. HTML y css/tercera-entrega/html/vehiculos.html
+++ b/1. HTML y css/tercera-entrega/html/vehiculos.html
@@ -16,11 +16,11 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/vehiculos.html">Vehículos</a></li>
-                        <li><a href="../html/quienessomos.html">Quienes Somos</a></li>
-                        <li><a href="../html/postventa.html">Post Venta</a></li>
-                        <li><a href="../html/contacto.html">Contacto</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="html/vehiculos.html">Vehículos</a></li>
+                        <li><a href="html/quienessomos.html">Quienes Somos</a></li>
+                        <li><a href="html/postventa.html">Post Venta</a></li>
+                        <li><a href="html/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
                 <div class="hamburger-menu">
